# world

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
lightning_logs/version_0/: hparams.yaml  metrics.csv
scripts/: visualize_dataset.py
scripts/flow_matching/: precompute_latents.py  train.py  visualize_time_embeddings.py
scripts/vqvae/: train.py
src/world/: __about__.py  __init__.py  data.py  dit.py  flow_matching.py  vit.py  vqvae.py
tests/: __init__.py
