[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "world"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Tristan Shah", email = "trisshah@ttu.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "torch>=2.0",
  "torchvision>=0.15",
  "pytorch-lightning>=2.0",
  "pandas>=1.5",
  "Pillow>=9.0",
  "matplotlib>=3.7",
  "diffusers>=0.27",
  "wandb>=0.17",
  "kaggle>=1.6",
  "torch-ema>=0.3",
  "accelerate"
]

[project.urls]
Documentation = "https://github.com/Tristan Shah/world#readme"
Issues = "https://github.com/Tristan Shah/world/issues"
Source = "https://github.com/Tristan Shah/world"

[tool.hatch.version]
path = "src/world/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/world tests}"

[tool.coverage.run]
source_pkgs = ["world", "tests"]
branch = true
parallel = true
omit = [
  "src/world/__about__.py",
]

[tool.coverage.paths]
world = ["src/world", "*/world/src/world"]
tests = ["tests", "*/world/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
